Removes whitespace on splash page by giving sessions-page class a fixed height of 500px

--- a/app/assets/stylesheets/customer/_classses.scss
+++ b/app/assets/stylesheets/customer/_classses.scss
@@ -233,6 +233,7 @@
 #sessions-page {
   width: 50%;
   margin: 0 auto;
+  height: 500px;
 }
 
 #upcoming-classes-page {
